tests/__snapshots__/feature-watch-signal-sent-stderr.snap.txt
Error: Type 'number' is not identical to type 'string'.

  1 | import { expect, test } from "tstyche";
  2 | test("is string?", () => {
  3 |   expect<number>().type.toBe<string>();
    |                              ~~~~~~
  4 | });
  5 | 

      at ./a-feature/__typetests__/isString.test.ts:3:30 ❭ is string?

